Lorem ipsum eingefügt

--- a/Medizinplattform/WebContent/haftung.xhtml
+++ b/Medizinplattform/WebContent/haftung.xhtml
@@ -18,8 +18,7 @@
 		</h1>  
 	
 		<p class="g">   
-	 	Die Hochschule für angewandte Wissenschaften Würzburg-Schweinfurt erklärt, dass sie keinerlei Einfluss auf die Inhalte von gelinkten externen Seiten hat und sich deshalb ausdrücklich von allen Inhalten aller gelinkten externen Seiten auf ihrer gesamten Website distanziert. Diese Erklärung gilt auch für Banner, sowie für alle Inhalte jener Seiten, zu denen diese Banner führen.
-	 	Neben fremden externen Angeboten, auf die per Hyperlink verwiesen wird, distanziert sich die Hochschule für angewandte Wissenschaften Würzburg-Schweinfurt hiermit ausdrücklich von fremden Inhalten, die auf den eigenen Servern bereitgehalten werden (Web-Hosting). Darunter fallen insbesondere die privaten Homepages von Studierenden.
+	 	Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
 		</p>
 	  </div>
 	</ui:define>
