--- a/Medizinplattform/WebContent/statistics.xhtml
+++ b/Medizinplattform/WebContent/statistics.xhtml
@@ -4,12 +4,19 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core">
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:p="http://primefaces.org/ui">
 
 <ui:composition template="/templates/template.xhtml">
 <ui:define name="content">
 		<div class="statistics">
-			 
+			 <p:panel>
+			 <p:barChart id="basic" value="#{statisticsBean.categoryModel}" legendPosition="ne"  
+                title="Oft vorkommende Symptome" min="0" max="#{statisticsBean.totalSymptoms}" style="width:700px" animate="true"/>  
+             </p:panel>
+             <div style="height:12px"> </div>
+             <p:panel>
+             </p:panel>
 		</div>
 </ui:define>
 </ui:composition>
