--- a/Medizinplattform/WebContent/statistics.xhtml
+++ b/Medizinplattform/WebContent/statistics.xhtml
@@ -11,7 +11,7 @@
 <ui:define name="content">
 		<div class="statistics">
 			 <p:panel>
-			 <p:barChart id="basic" value="#{statisticsBean.categoryModel}" legendPosition="ne"  
+			 <p:barChart id="basic" value="#{statisticsBean.categoryModel}" legendPosition="ne"  orientation="horizontal"
                 title="Oft vorkommende Symptome" min="0" max="#{statisticsBean.totalSymptoms}" style="width:700px" animate="true"/>  
              </p:panel>
              <div style="height:12px"> </div>
