ohne parameterübergabe readStories

--- a/Medizinplattform/WebContent/abcSuche.xhtml
+++ b/Medizinplattform/WebContent/abcSuche.xhtml
@@ -53,9 +53,9 @@
 							<h:column>
 		   						<!-- <h:link value="#{l}" outcome="readStories" style="color:red" /> -->
 		   			
-		   						<h:outputLink value="readStories.xhtml" onclick="#{readStoriesBean.setAbout('Erkältung')}" style="text-decoration:none;">
+		   						<h:outputLink value="readStories.xhtml" style="text-decoration:none;">
 									<h:outputText style="color:black" value="#{l}" />
-								<f:param name="about" value="#{l}" />
+								<f:param name="about" value="blabla" />
 					</h:outputLink>
 		   		</h:column>
 		   	</h:dataTable>     
