paar kleine änderungen vorgenommen und den Text in haftungsausschluss auf was mehr vernünftiges getauscht

--- a/Medizinplattform/WebContent/readStories.xhtml
+++ b/Medizinplattform/WebContent/readStories.xhtml
@@ -16,8 +16,8 @@
 	<h:outputStylesheet library="css" name="buttons.css"  />
 	<h:form id="form">
 				
-		<div style="text-align:center">
-			Hier können Sie diverse Einträge bzg.&nsbr; '<h:outputText value="#{readStoriesBean.about}" style="color:#000000"/>'&nsbr; lesen
+		<div id="bsch" >
+			Hier können Sie diverse Einträge bzg.&nsbr; '<h:outputText value="#{readStoriesBean.about}"/>'&nsbr; lesen
 		</div>
 		<br/>
 		
