Geburtstag abspeicherung in DB gemacht,aber es wird nichts gespeichert und wird auch keine Fehler angezeigt,HILFE!!!

--- a/Medizinplattform/WebContent/registration.xhtml
+++ b/Medizinplattform/WebContent/registration.xhtml
@@ -55,7 +55,7 @@
 	</h:selectOneRadio>
 		
     <label>Geburtstag:</label><br></br>
-    <input type="date" name="textinput2" id="textinput2"></input><br></br>
+    <input type="date" name="textinput2" id="textinput2" value="#{RegisterBean.date}"></input><br></br>
     
     <label>Gewicht:</label><br></br>
     <p:inputText value="#{registerBean.gewicht}" required="true" placeholder="in Kilogramm"></p:inputText><br></br>
