--- a/Medizinplattform/WebContent/composites/header.xhtml
+++ b/Medizinplattform/WebContent/composites/header.xhtml
@@ -22,7 +22,7 @@
 		
 		<h:panelGroup rendered="#{sessionBean.user}">
 		<li>
-		<h:commandButton class="MainMenu-button" value="Hauptmenü" action="MainMenu.xhtml?faces-redirect=true" title="Hier kommen Sie zur Hauptmenü"></h:commandButton>
+		<h:commandButton class="MainMenu-button" value="Hauptmenü" action="MainMenu.xhtml?faces-redirect=true" title="Hier kommen Sie zum Hauptmenü"></h:commandButton>
 		</li>
 		<li>
 		<h:commandButton class="chronicle-button" value="Suche" action="abcSuche.xhtml?faces-redirect=true" title="Hier können Sie nach Krankheiten suchen"></h:commandButton>
