noch ein paar kleine änderungen, layout und registrierung

--- a/Medizinplattform/WebContent/MainMenu.xhtml
+++ b/Medizinplattform/WebContent/MainMenu.xhtml
@@ -15,7 +15,7 @@
 	  	<br />
 	  	<br />
 		<div id="template">
-    		<h:link id="logo2" value="Hauptmenü: " outcome=""></h:link>
+    		<span id="logo2" >Mediplatt</span>
  		</div>
 	  
 
