--- a/Medizinplattform/WebContent/registration-success.xhtml
+++ b/Medizinplattform/WebContent/registration-success.xhtml
@@ -9,8 +9,8 @@
 <ui:composition template="/templates/template.xhtml">
 	<ui:define name="content">
 	 <div class="common-content">
-	    <h1>Your registration was successful. Try to login now.</h1>
-	    <h6>...or maybe later</h6>
+	    <h1>Ihre Registration war erfolgreich. Sie können sich nun einloggen.</h1>
+	    <h6>...oder auch später</h6>
 	 </div>  
 	</ui:define>
 </ui:composition>
