--- a/Medizinplattform/WebContent/about.xhtml
+++ b/Medizinplattform/WebContent/about.xhtml
@@ -26,7 +26,7 @@
                      <li>Allgayer Fabian - Informatik, Mobile Solutions</li><br/>
                      <li>Weber Ilja - Informatik, Technische Informatik</li>
     </ul>	 
-	  	  <h4>Betreuender Professor ist Steffen Heinzl.</h4>
+	  	  <h4>Betreuender Professor ist Prof. Dr. Steffen Heinzl.</h4>
 	  	  <br/>
 	  	    <br/>
 	  	      <br/>
