main menü anpassung

--- a/Medizinplattform/WebContent/MainMenu.xhtml
+++ b/Medizinplattform/WebContent/MainMenu.xhtml
@@ -15,7 +15,7 @@
 	  	<br />
 	  	<br />
 		<div id="template">
-    		<span id="logo2" >Mediplatt</span>
+    		<span id="logo2" >Hauptmenü</span>
  		</div>
 	  
 
