--- a/Medizinplattform/WebContent/readStories.xhtml
+++ b/Medizinplattform/WebContent/readStories.xhtml
@@ -40,7 +40,7 @@
 			</tr>
 			<tr>
 				<h:panelGrid columns="2" cellpadding="10"  class="zentriert">  
-       				<h:outputText value="Sortieren nach Datum: " />  
+       				<h:outputText value="Sortieren nach Datum der Diagnostizierung:" /> 
 	        		<h:selectOneRadio value="#{readStoriesBean.sort}" >
 					   <f:selectItem itemValue="DESC" itemLabel="aktuell zuerst" />
 					   <f:selectItem itemValue="ASC" itemLabel="aktuell zuletzt" />	   			
